Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Noemi Spadini and is
+      This project was coded by <strong>Noemi Spadini</strong> and is
       <a href="https://github.com/NoemiSpadini/world-clock" target="_blank">
         sourced on GitHub.</a
       >
